<resources>
    <string name="app_name">task</string>
    <string name="load_from_api">LOAD API</string>
    <string name="load_from_database">LOAD DB</string>
    <string name="add_new_person">Add new Person</string>
    <string name="list">Список сотрудников</string>
    <string name="department">Department</string>
    <string name="position">Position</string>
    <string name="salary">Salary</string>
    <string name="age">Age</string>
    <string name="full_name">Full Name</string>
    <string name="save">Save</string>
</resources>
